# EveNet-Tools

./: .gitignore  README.md  pyproject.toml
evenet_tools/: cli.py  utils.py
evenet_tools/share/: finetune-example.yaml  finetune-example.yaml_updated.yaml  predict-example.yaml
evenet_tools/share/event_info/: multi_process.yaml
evenet_tools/share/network/: network-100M.yaml  network-20M.yaml
evenet_tools/share/options/: options.yaml
evenet_tools/share/process_info/: default.yaml  pretrain.yaml
evenet_tools/share/resonance/: standard_model.yaml
